--- a/public/posts/android-setup.mdx
+++ b/public/posts/android-setup.mdx
@@ -34,10 +34,10 @@ The AppAuth settings are summarised below:
 
 | Field | Value |
 | ----- | ----- |
-| <span style={{color:'green'}}>**Client ID**</span> | 53osemtot8tp3n3qct5r2hijk3 |
-| <span style={{color:'green'}}>**Redirect URI**</span> | net.openid.appauthdemo:/oauth2redirect |
-| <span style={{color:'green'}}>**Scope**</span> | openid email profile |
-| <span style={{color:'green'}}>**Discovery URI**</span> | [https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9/.well-known/openid-configuration](https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9/.well-known/openid-configuration) |
+| Client ID | 53osemtot8tp3n3qct5r2hijk3 |
+| Redirect URI | net.openid.appauthdemo:/oauth2redirect |
+| Scope | openid email profile |
+| Discovery URI | [https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9/.well-known/openid-configuration](https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9/.well-known/openid-configuration) |
 
 ### Step 4: Update OAuth Application Configuration
 
