--- a/public/posts/api-technical-support-analysis.mdx
+++ b/public/posts/api-technical-support-analysis.mdx
@@ -154,7 +154,7 @@ This query returns results similar to the following and provides a clear picture
 |FinalApi     |GET            |/investments/companies/2/transactions |FinalSPA             |500            |exception_simulation|
 ```
 
-This can provides powerful ways to enable DevOps staff to resolve code-level problems, and enable qualities like DevOps resolving <span style={{color:'red'}}>80% of production incidents</span> without the need to involve a specialist developer.
+This can provides powerful ways to enable DevOps staff to resolve code-level problems, and enable qualities like DevOps resolving 80% of production incidents without the need to involve a specialist developer.
 
 ### 1.2. Querying by Resource IDs
 
