--- a/public/posts/basicspa-codingkeypoints.mdx
+++ b/public/posts/basicspa-codingkeypoints.mdx
@@ -8,9 +8,9 @@ The SPA downloads the following types of static resources to the browser. In thi
 
 | Area | Implementation Details |
 | ---- | ---------------------- |
-| <span style={{color:'green'}}>**HTML**</span> | I use a single static *index.html* page and its DOM elements are updated dynamically. |
-| <span style={{color:'green'}}>**CSS**</span> | I use [Bootstrap](https://getbootstrap.com/docs/4.0/getting-started/introduction/) to control layout in a mobile first manner, and for most styling. |
-| <span style={{color:'green'}}>**JavaScript**</span> | I use TypeScript code that gets compiled to JavaScript bundles when it runs in the browser. |
+| HTML | I use a single static *index.html* page and its DOM elements are updated dynamically. |
+| CSS | I use [Bootstrap](https://getbootstrap.com/docs/4.0/getting-started/introduction/) to control layout in a mobile first manner, and for most styling. |
+| JavaScript | I use TypeScript code that gets compiled to JavaScript bundles when it runs in the browser. |
 
 The SPA uses only a handful of external dependencies, expressed in its *package.json* file. The most interesting of these is the *oidc-client-ts* library, which implements OpenID Connect in JavaScript.
 
