--- a/public/posts/basicspa-execution.mdx
+++ b/public/posts/basicspa-execution.mdx
@@ -95,8 +95,8 @@ This blog’s code samples use DNS based URLs on a local computer, to represent 
 
 | Component | Base URL |
 | --------- | -------- |
-| <span style={{color:'green'}}>**SPA**</span> | http://www.authsamples-dev/spa |
-| <span style={{color:'green'}}>**API**</span> | http://api.authsamples-dev.com/api |
+| SPA | http://www.authsamples-dev/spa |
+| API | http://api.authsamples-dev.com/api |
 
 To enable the DNS lookup to work on a development computer, add DNS entries to your hosts file:
 
