--- a/public/posts/basicspa-overview.mdx
+++ b/public/posts/basicspa-overview.mdx
@@ -22,7 +22,7 @@ The Basic SPA Code Sample will get the below components and endpoints talking to
 
 ### SPAs in 2021
 
-<span style={{color:'red'}}>This sample uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend</Link> approach.</span>
+This sample uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend</Link> approach.
 
 The traditional SPA flow remains useful when you first learn OAuth, and to represent a pure SPA architecture.
 
