--- a/public/posts/effective-api-logging.mdx
+++ b/public/posts/effective-api-logging.mdx
@@ -19,9 +19,9 @@ The following table summarises some common limitations you may run into with you
 
 | Problem Area | Description |
 | ------------ | ----------- |
-| <span style={{color:'red'}}>Difficult to Query</span> | Logger per class output may use free text and as a result only support text find operations. |
-| <span style={{color:'red'}}>Does not Scale</span> | Under load it may be difficult to answer basic questions such as how many errors of a particular type there have been today. |
-| <span style={{color:'red'}}>Not Configurable</span> | In some setups it can be impossible to get stakeholders to change the production log level when there is a problem, for fear they will make conditions worse. |
+| Difficult to Query | Logger per class output may use free text and as a result only support text find operations. |
+| Does not Scale | Under load it may be difficult to answer basic questions such as how many errors of a particular type there have been today. |
+| Not Configurable | In some setups it can be impossible to get stakeholders to change the production log level when there is a problem, for fear they will make conditions worse. |
 
 ### Technical Support Logging Requirements
 
