--- a/public/posts/error-handling-and-supportability.mdx
+++ b/public/posts/error-handling-and-supportability.mdx
@@ -4,14 +4,14 @@ In the previous post I explained this blog's <Link href='/posts/effective-api-lo
 
 ### Fast Problem Resolution
 
-An early focus on failures reduces stress and improves productivity. In production it can make the difference between these two outcomes, where the latter causes <span style={{color:'red'}}>reputational damage</span> for your company:
+An early focus on failures reduces stress and improves productivity. In production it can make the difference between these two outcomes, where the latter causes reputational damage for your company:
 
 - A problem for a high profile user takes *10 minutes* to resolve.
 - A problem for a high profile user takes *12 hours* to resolve.
 
 ### Fast Time to Market
 
-Even more important is the <span style={{color:'red'}}>hidden cost</span> when software and people do not have good processes for handling failures. Companies are rarely able to measure or quantify these costs:
+Even more important is the hidden cost when software and people do not have good processes for handling failures. Companies are rarely able to measure or quantify these costs:
 
 - Cryptic failures can block developers or testers.
 - Production incidents can waste time for senior engineers.
