--- a/public/posts/federated-logins.mdx
+++ b/public/posts/federated-logins.mdx
@@ -51,7 +51,7 @@ The deeper behaviour when you integrate authentication can be control over user 
 
 ![token identity](../images/140/token-identity.jpg)
 
-You may need to use *Account Linking* to identify existing accounts from authentication user attributes. This requires you to use data storage and custom logic in your authorization server. Without the right authorization server support, there can be outcomes such as <span style={{color:'red'}}>duplication of user accounts</span>, which can damage the integrity of both your identity data and business data.
+You may need to use *Account Linking* to identify existing accounts from authentication user attributes. This requires you to use data storage and custom logic in your authorization server. Without the right authorization server support, there can be outcomes such as duplication of user accounts, which can damage the integrity of both your identity data and business data.
 
 ### Custom Authentication
 
