--- a/public/posts/ios-code-sample-overview.mdx
+++ b/public/posts/ios-code-sample-overview.mdx
@@ -78,9 +78,9 @@ The following problems exist if you perform login redirects on a normal mobile w
 
 | Problem Area | Description |
 | ------------ | ----------- |
-| <span style={{color:'red'}}>Password Autofill</span> | This feature will generally work less reliably in a web view, resulting in a poor login experience |
-| <span style={{color:'red'}}>Single Sign On</span> | Cookies will not be shared with other apps and are likely to be dropped more aggressively within your own app |
-| <span style={{color:'red'}}>Could be Blocked</span> | Google is an example of an identity provider that [blocks logins on a mobile web view](https://auth0.com/blog/google-blocks-oauth-requests-from-embedded-browsers) |
+| Password Autofill | This feature will generally work less reliably in a web view, resulting in a poor login experience |
+| Single Sign On | Cookies will not be shared with other apps and are likely to be dropped more aggressively within your own app |
+| Could be Blocked | Google is an example of an identity provider that [blocks logins on a mobile web view](https://auth0.com/blog/google-blocks-oauth-requests-from-embedded-browsers) |
 
 ### Our Sample’s Login Usability Features
 
