--- a/public/posts/android-infrastructure-setup.mdx
+++ b/public/posts/android-infrastructure-setup.mdx
@@ -8,8 +8,8 @@ Our Android sample uses 2 online domains, which were configured as part of our <
 
 | Domain | Usage |
 | ------ | ----- |
-| <span style={{color:'green'}}>**mobile.authsamples.com**</span> | The domain name for mobile deep linking, which points to a cloud location that hosts deep linking assets |
-| <span style={{color:'green'}}>**www.authsamples.com**</span> | We use the web domain for ad-hoc hosting of basic web pages, including intermediate post-login and post-logout web pages |
+| mobile.authsamples.com | The domain name for mobile deep linking, which points to a cloud location that hosts deep linking assets |
+| www.authsamples.com | We use the web domain for ad-hoc hosting of basic web pages, including intermediate post-login and post-logout web pages |
 
 ### Intermediate Web Page Hosting
 
